--- a/saham.html
+++ b/saham.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>List Vendor - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
+<title>Saham - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -111,7 +111,6 @@
 <div class="main">
   <div class="main-inner">
     <div class="container">
-      <p id="notice_info" class="bg-success pad-10 text-center">Data berhasil dimasukkan</p>
       <div class="row">
         <div class="span2">
           <div class="widget">
@@ -121,14 +120,14 @@
             <!-- /widget-header -->
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="vendor_list.html" class="shortcut" style="width: 100%;">
+                <a href="saham.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">List</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="vendor_new.html" class="shortcut" style="width: 100%;">
+                <a href="saham_new.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">New</span> 
                 </a>
@@ -143,83 +142,55 @@
         <div class="span10">
           <div class="widget widget-table action-table">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>List Table Vendor</h3>
+              <h3>Saham</h3>
             </div>
             <!-- /widget-header -->
             <div class="widget-content">
               <table class="table table-striped table-bordered">
                 <thead>
                   <tr>
-                    <th width="30"> No. </th>
-                    <th> Nama Perusahaan </th>
+                    <th> No. </th>
+                    <th> Pemilik Saham</th>
                     <th> Alamat </th>
-                    <th> Contact Person </th>
-                    <th> Telpon </th>
-                    <th> Email </th>
-                    <th>Aktif</th>
+                    <th> Prosentase Saham</th>
                     <th class="td-actions"> </th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td> 1 </td>
-                    <td> Perusahaan 1 </td>
-                    <td> Jakarta 1 </td>
-                    <td> CP 1 </td>
-                    <td> +628xxxxx </td>
-                    <td> perusahaan_1@email.com </td>
-                    <td>&#10004;</td>
-                    <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
+                    <td> 1. </td>
+                    <td> Andre Lestari </td>
+                    <td> Bekasi </td>
+                    <td> 20 % </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> 2 </td>
-                    <td> Perusahaan 2 </td>
-                    <td> Jakarta 2 </td>
-                    <td> CP 2 </td>
-                    <td> +628xxxxx </td>
-                    <td> perusahaan_2@email.com </td>
-                    <td>&#10004;</td>
-                    <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
+                    <td> 2. </td>
+                    <td> Andre Lestari </td>
+                    <td> Bekasi </td>
+                    <td> 20 % </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> 3 </td>
-                    <td> Perusahaan 3 </td>
-                    <td> Jakarta 3 </td>
-                    <td> CP 3 </td>
-                    <td> +628xxxxx </td>
-                    <td> perusahaan_3@email.com </td>
-                    <td>-</td>
-                    <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
+                    <td> 3. </td>
+                    <td> Andre Lestari </td>
+                    <td> Bekasi </td>
+                    <td> 20 % </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> 4 </td>
-                    <td> Perusahaan 4 </td>
-                    <td> Jakarta 4 </td>
-                    <td> CP 4 </td>
-                    <td> +628xxxxx </td>
-                    <td> perusahaan_4@email.com </td>
-                    <td>&#10004;</td>
-                    <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
+                    <td> 4. </td>
+                    <td> Andre Lestari </td>
+                    <td> Bekasi </td>
+                    <td> 20 % </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> 5 </td>
-                    <td> Perusahaan 5 </td>
-                    <td> Jakarta 5 </td>
-                    <td> CP 5 </td>
-                    <td> +628xxxxx </td>
-                    <td> perusahaan_5@email.com </td>
-                    <td></td>
-                    <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                  <tr>
-                    <td> 6 </td>
-                    <td> Perusahaan 6 </td>
-                    <td> Jakarta 6 </td>
-                    <td> CP 6 </td>
-                    <td> +628xxxxx </td>
-                    <td> perusahaan_6@email.com </td>
-                    <td>&#10004;</td>
-                    <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
+                    <td> 5. </td>
+                    <td> Andre Lestari </td>
+                    <td> Bekasi </td>
+                    <td> 20 % </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                 
                 </tbody>
@@ -257,10 +228,5 @@
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="assets/js/jquery-1.7.2.min.js"></script> 
 <script src="assets/js/bootstrap.js"></script>
-<script type="text/javascript">
-  setTimeout(function() {
-    $('#notice_info').hide();
-  }, 2000);
-</script>
 </body>
 </html>
