--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
                     <li><a href="pembelian.html"><i class="icon-chevron-sign-left"></i><span>Pembelian</span></a></li>
                     <li><a href="penjualan.html"><i class="icon-chevron-sign-right"></i><span>Penjualan</span></a></li>
                     <li><a href="proyek_dashboard.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+<li><a href="saham.html"><i class="icon-road"></i><span>Saham</span></a></li>
+                    <li><a href="saham.html"><i class="icon-road"></i><span>Saham</span></a></li>
                     <li><a href="bpu.html"><i class="icon-paste"></i><span>BPU</span></a></li>
                     <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-puzzle-piece"></i><span>Pabrikasi</span> <b class="caret"></b></a>
                         <ul class="dropdown-menu">
