update print bukti pembayaran

--- a/print_bukti_pembayaran.html
+++ b/print_bukti_pembayaran.html
@@ -208,14 +208,10 @@
                 <td>
                     <table class="blck no-border">
                         <tr>
-                            <td>
+                            <td colspan="2">
                                 <div class="row blck ovrlw rltv">
                                     <div class="lft ovrlw">
                                         <div class="pd10 lft cntr"><img src="assets/img/logo4.png"></div>
-                                        <div class="logo-side">
-                                            <p>PT. PUTRA BAHARI MANDIRI</p>
-                                            <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
-                                        </div>
                                     </div>
                                     <div class="rgt">
                                         <table class="no-border">
@@ -233,7 +229,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>
+                            <td colspan="2">
                                 <table class="border blck">
                                     <tr>
                                         <td>
@@ -290,7 +286,15 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>
+                            <td style="vertical-align: top;">
+                                <div class="lft ovrlw">
+                                    <div style="font-style: italic;">
+                                        <p>PT. PUTRA BAHARI MANDIRI</p>
+                                        <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
+                                    </div>
+                                </div>
+                            </td>
+                            <td style="vertical-align: top;">
                                 <div class="row blck ovrlw rltv">
                                     <div class="rgt cntr" style="margin-right:10px;">
                                         <p>Jakarta, 1 Februari 2016</p>
