edit print out alamat logo

--- a/print_invoice.html
+++ b/print_invoice.html
@@ -7,7 +7,7 @@
 			-webkit-box-sizing: border-box;
 		}
         @page {
-            size: A4 portrait; /* can use also 'landscape' for orientation */
+            size: A4 landscape; /* can use also 'landscape' for orientation */
             margin: 0.2in;
             border: thin solid black;
             padding: 0.2inem;
@@ -154,10 +154,13 @@
             </div>
         </div>
         <div class="row ovrlw">
-        	<div class="box lft pd5">
-        		<h3>TO : PT. JGC INDONESIA</h3>
-        		<p>Jl. TB. Simatupang No. 7-B, Cilandak<br/>Jakarta Selatan 12430, Indonesia<br/>Phone : 62 - 21-2997.6500. Fax: 62-21-2997.6599<br/>E-mail : indo@jgc-indonesia.com</p>
-        	</div>
+            <div class="lft ovrlw">
+                <div class="pd10"><img src="assets/img/logo4.png"></div>
+                <div class="box pd5">
+                <h3>TO : PT. JGC INDONESIA</h3>
+                <p>Jl. TB. Simatupang No. 7-B, Cilandak<br/>Jakarta Selatan 12430, Indonesia<br/>Phone : 62 - 21-2997.6500. Fax: 62-21-2997.6599<br/>E-mail : indo@jgc-indonesia.com</p>
+            </div>
+            </div>
         	<div class="rgt">
         		<table>
         			<tbody>
@@ -273,6 +276,12 @@
         	</table>
         </div>
         <div class="row ovrlw">
+            <div class="lft ovrlw">
+                <div style="font-style: italic;">
+                    <p>PT. PUTRA BAHARI MANDIRI</p>
+                    <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
+                </div>
+            </div>
         	<div class="ftr rgt pd10 cntr">
         		<p>Bekasi, 09 Juni 2014<br/>Hormat Kami</p>
         		<br/><br/><br/><br/>
