--- a/print_kwitansi.html
+++ b/print_kwitansi.html
@@ -212,10 +212,6 @@
                                 <div class="row blck ovrlw rltv">
                                     <div class="lft ovrlw">
                                         <div class="pd10 lft cntr"><img src="assets/img/logo4.png"></div>
-                                        <div class="logo-side">
-                                            <p>PT. PUTRA BAHARI MANDIRI</p>
-                                            <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
-                                        </div>
                                     </div>
                                     <div class="rgt">
                                         <table class="no-border">
@@ -270,6 +266,17 @@
                                             </table>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td>
+                                            <table class="blck no-border">
+                                                <tr>
+                                                    <td width="15%"><span style="border-bottom:1px solid;">Catatan</span><br/><span>Notes :</span></td>
+                                                    <td width="5%" class="delimiter">:</td>
+                                                    <td><div class="blck" style="border-bottom:thin dotted black;"><ol style="padding:10px;"><li>Mohon pembayaran ditransfer ke rekening bank berikut ini :<br/>BCA Cabang<br/>A/C 0001<br/>a.n. PT Putra Bahari Mandiri</li><li>Pembayaran baru dianggap sah setelah cek/giro telah dicairkan.</li></ol></div></td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
                                 </table>
                             </td>
                         </tr>
@@ -277,28 +284,9 @@
                             <td>
                                 <div class="row blck ovrlw rltv">
                                     <div class="lft ovrlw">
-                                        <div class="rltv" style="border-bottom:2px solid;border-top:3px solid;width:300px;">
-                                            <div class="kwt blck">&nbsp;</div>
-                                            <div class="kwt blck">&nbsp;</div>
-                                            <div class="kwt blck">&nbsp;</div>
-                                            <div class="kwt blck">&nbsp;</div>
-                                            <div class="kwt blck">&nbsp;</div>
-                                            <div class="kwt blck">&nbsp;</div>
-                                            <div class="kwt blck">&nbsp;</div>
-                                            <div class="kwt blck">&nbsp;</div>
-                                            <div class="kwt blck">&nbsp;</div>
-                                            <div class="kwt blck">&nbsp;</div>
-                                            <div style="position:absolute;font-size:30px;top:8px;">
-                                                <span style="background:white;padding:3px 20px 3px 0;">Rp.</span> 1.000.000
-                                            </div>
+                                            <p>PT. PUTRA BAHARI MANDIRI</p>
+                                            <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
                                         </div>
-                                        <br/>
-                                        <p>Catatan :</p>
-                                        <ol>
-                                            <li>Mohon pembayaran ditransfer ke rekening bank berikut ini :<br/>BCA Cabang<br/>A/C 0001<br/>a.n. PT Putra Bahari Mandiri</li>
-                                            <li>Pembayaran baru dianggap sah setelah cek/giro telah dicairkan.</li>
-                                        </ol>
-                                    </div>
                                     <div class="rgt cntr" style="margin-right:10px;">
                                         <p>Jakarta, 1 Februari 2016</p>
                                         <br/><br/><br/><br/><br/><br/><br/>
