--- a/print_po.html
+++ b/print_po.html
@@ -137,7 +137,8 @@
 <body>
     <div id="page-content">
         <div class="row ovrlw">
-        	<div class="lft">
+            <div class="lft ovrlw">
+                <div class="pd10"><img src="assets/img/logo4.png"></div>
         		<h3>PT. WILDAN LESTARI</h3>
         		<p>Bendungan Jago Jl. Melati. No. 1B. Kemayoran<br/>Jakarta Pusat Telp (021) 4265084<br/>085883939914 - 085216684116</p>
         	</div>
@@ -255,11 +256,18 @@
         			</div>
         		</div>
         	</div>
-        	<div class="ftr rgt pd10 cntr">
-        		<p>Bekasi, 09 Juni 2014</p>
-        		<br/><br/><br/><br/>
-        		<p>Andri Lestari<br/>Direktur</p>
-        	</div>
+        </div>
+        <hr style="font-weight: bolde;border-bottom: dotted black;">
+        <div class="row ovrlw">
+            <div class="lft pd5">
+                <p>PT. PUTRA BAHARI MANDIRI</p>
+                <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
+            </div>
+            <div class="rgt pd10 cntr">
+                <p>Bekasi, 09 Juni 2014</p>
+                <br/><br/><br/><br/>
+                <p>Andri Lestari<br/>Direktur</p>
+            </div>
         </div>
         <!--<p style="page-break-after:always;"/>-->
     </div>
