--- a/print_tanda_terima.html
+++ b/print_tanda_terima.html
@@ -194,10 +194,10 @@
                 <td colspan="2">
                     <div class="row blck ovrlw rltv">
                         <div class="lft ovrlw">
-                            <div class="box pd10 lft cntr">LOGO HERE</div>
-                            <div class="logo-side">
-                                <p>PT. PUTRA BAHARI MANDIRI</p>
-                                <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
+                            <div class="lft ovrlw">
+                                <div class="lft ovrlw">
+                                    <div class="pd10 lft cntr"><img src="assets/img/logo4.png"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="rgt">
@@ -366,6 +366,13 @@
             </tr>
         </table>
         <!--<p style="page-break-after:always;"/>-->
+    </div>
+    <br>
+    <div>
+        <div class="lft ovrlw">
+            <p>PT. PUTRA BAHARI MANDIRI</p>
+            <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
+        </div>
     </div>
 </body>
 </html>
