--- a/print_surat_jalan.html
+++ b/print_surat_jalan.html
@@ -167,10 +167,8 @@
     <div id="page-content">
         <div class="row blck ovrlw">
             <div class="lft ovrlw">
-                <div class="box pd10 lft cntr">LOGO HERE</div>
-                <div class="logo-side">
-                    <p>PT. PUTRA BAHARI MANDIRI</p>
-                    <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
+                <div class="lft ovrlw">
+                    <div class="pd10 lft cntr"><img src="assets/img/logo4.png"></div>
                 </div>
             </div>
             <div class="rgt">
@@ -204,6 +202,10 @@
             <div class="rgt cntr">
                 <p>Hormat Kami,<br/><br/><br/><br/>(Nama Hormat)</p>
             </div>
+        </div>
+        <div class="lft ovrlw">
+            <p>PT. PUTRA BAHARI MANDIRI</p>
+            <p>JL. PLTGU Muara Tawar RT/RW 002/013<br/>Desa xyz, Kec. Taruma, Bekasi 17212<br/>Tlp. (021)<br/>Email : putrabaharimandiri@yahoo.co.id</p>
         </div>
         <!--<p style="page-break-after:always;"/>-->
     </div>
