add general report page

--- a/print_tanda_terima.html
+++ b/print_tanda_terima.html
@@ -283,6 +283,11 @@
                                                 <td>Tgl : ...................</td>
                                             </tr>
                                             <tr>
+                                                <td><i class="icon-large icon-check"></i> Berita Acara</td>
+                                                <td>No : ...................</td>
+                                                <td>Tgl : ...................</td>
+                                            </tr>
+                                            <tr>
                                                 <td><i class="icon-large icon-check"></i> Surat jalan asli</td>
                                                 <td>No : ...................</td>
                                                 <td>Tgl : 11/10/15</td>
