--- a/laporan.html
+++ b/laporan.html
@@ -136,13 +136,13 @@
                       <div class="accordion-inner">
                         <div>
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="#" class="el-fil">Neraca</a><br/></span>
+                          <span class="shortcut-label"><a href="print_neraca.html" class="el-fil">Neraca</a><br/></span>
                           <div class="filter">
                             <input placeholder="Tanggal Mulai" name="" id="" value="" /> - <input placeholder="Tanggal Akhir" name="" id="" value="" /> <input type="submit" value="Submit" />
                           </div>
 
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="#" class="el-fil">Laba/Rugi</a><br/></span>
+                          <span class="shortcut-label"><a href="print_general_report.html" class="el-fil">General Report</a><br/></span>
                           <div class="filter">
                             <input placeholder="Tanggal Mulai" name="" id="" value="" /> - <input placeholder="Tanggal Akhir" name="" id="" value="" /> <input type="submit" value="Submit" />
                           </div>
