--- a/berita_acara_detail_bpjs.html
+++ b/berita_acara_detail_bpjs.html
@@ -107,7 +107,7 @@ ol, ul {
               <li><a href="pembelian.html"><i class="icon-chevron-sign-left"></i><span>Pembelian</span></a></li>
               <li><a href="penjualan.html"><i class="icon-chevron-sign-right"></i><span>Penjualan</span></a></li>
               <li><a href="proyek_dashboard.html"><i class="icon-road"></i><span>Proyek</span></a></li>
-<li><a href="saham.html"><i class="icon-sitemap"></i><span>Saham</span></a></li>
+<li><a href="saham.html"><i class="icon-sitemap"></i><span>Lain - lain</span></a></li>
 <li><a href="bpu.html"><i class="icon-paste"></i><span>BPU</span></a></li>
               <li><a href="laporan.html"><i class="icon-paste"></i><span>Laporan</span></a></li>
               <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
