edit laporan penjualan barang

--- a/laporan.html
+++ b/laporan.html
@@ -134,7 +134,7 @@
                           </div>
 
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="print_general_report.html" class="el-fil">General Report</a><br/></span>
+                          <span class="shortcut-label"><a href="print_general_report.html" class="el-fil">Laba / Rugi</a><br/></span>
                           <div class="filter">
                             <input placeholder="Tanggal Mulai" name="" id="" value="" /> - <input placeholder="Tanggal Akhir" name="" id="" value="" /> <input type="submit" value="Submit" />
                           </div>
