--- a/print_general_report.html
+++ b/print_general_report.html
@@ -11,40 +11,40 @@
 <div class="container">
   <div style="text-align: center;">
     <h1>PT. Putra Bahari Mandiri</h1>
-    <h2>General Report</h2>
-    <p>Per 1 Januari 2016</p>  
+    <h2>Penjualan per Barang</h2>
+    <p>Dari 1 Agustus 2016 sampai 31 Agustus 2016</p>  
   </div>                            
   <table class="table table-hover">
     <thead>
       <tr>
         <th>#</th>
-        <th>Detail</th>
-        <th>Masuk</th>
-        <th>Keluar</th>
-        <th>Saldo</th>
+        <th>Keterangan Barang</th>
+        <th>Kuantitas</th>
+        <th>Satuan</th>
+        <th>Jumlah</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>1</td>
-        <td>Penambahan Modal</td>
-        <td>Rp 500.000,-</td>
-        <td>-</td>
-        <td>Rp 500.000,-</td>
+        <td>Besi 10mm-12mm</td>
+        <td>100</td>
+        <td>Batang</td>
+        <td>Rp 1.000.000,-</td>
       </tr>
       <tr>
         <td>2</td>
-        <td>Transport Operator</td>
-        <td>-</td>
-        <td>Rp 100.000,-</td>
-        <td>Rp 400.000,-</td>
+        <td>Aspal Curah</td>
+        <td>10</td>
+        <td>Kg</td>
+        <td>Rp 1.050.000,-</td>
       </tr>
       <tr>
         <td>3</td>
-        <td>Transport Operator</td>
-        <td>-</td>
-        <td>Rp 100.000,-</td>
-        <td>Rp 300.000,-</td>
+        <td>Batu Merah Lokal</td>
+        <td>1000</td>
+        <td>Buah</td>
+        <td>Rp 5.000.000,-</td>
       </tr>
     </tbody>
   </table>
