edit laporan penjualan per client

--- a/print_penjualan_per_client.html
+++ b/print_penjualan_per_client.html
@@ -11,39 +11,35 @@
 <div class="container">
   <div style="text-align: center;">
     <h1>PT. Putra Bahari Mandiri</h1>
-    <h2>Penjualan per Barang</h2>
+    <h2>Penjualan per Client</h2>
     <p>Dari 1 Agustus 2016 sampai 31 Agustus 2016</p>  
   </div>                            
   <table class="table table-hover">
     <thead>
       <tr>
         <th>#</th>
-        <th>Keterangan Barang</th>
-        <th>Kuantitas</th>
-        <th>Satuan</th>
+        <th>Nama Client</th>
+        <th>No. Client</th>
         <th>Jumlah</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>1</td>
-        <td>Besi 10mm-12mm</td>
-        <td>100</td>
-        <td>Batang</td>
+        <td>PT. Jakarta Client 1</td>
+        <td>1001</td>
         <td>Rp 1.000.000,-</td>
       </tr>
       <tr>
         <td>2</td>
-        <td>Aspal Curah</td>
-        <td>10</td>
-        <td>Kg</td>
+        <td>PT. Bandung Client 2</td>
+        <td>1002</td>
         <td>Rp 1.050.000,-</td>
       </tr>
       <tr>
         <td>3</td>
-        <td>Batu Merah Lokal</td>
-        <td>1000</td>
-        <td>Buah</td>
+        <td>PT. Semarang Client 3</td>
+        <td>1003</td>
         <td>Rp 5.000.000,-</td>
       </tr>
     </tbody>
