edit laporan penjualan per client

--- a/laporan.html
+++ b/laporan.html
@@ -165,7 +165,7 @@
                       <div class="accordion-inner">
                         <div>
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="print_penjualan_per_client">Penjualan per Client</a></span><br/>
+                          <span class="shortcut-label"><a href="print_penjualan_per_client.html">Penjualan per Client</a></span><br/>
 
                           <i class="shortcut-icon icon-tag"></i>
                           <span class="shortcut-label"><a href="#">Grafik Penjualan Barang</a></span><br/>
