--- a/laporan.html
+++ b/laporan.html
@@ -168,7 +168,7 @@
                           <span class="shortcut-label"><a href="print_penjualan_per_client.html">Penjualan per Client</a></span><br/>
 
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="#">Grafik Penjualan Barang</a></span><br/>
+                          <span class="shortcut-label"><a href="print_penjualan_per_barang.html">Grafik Penjualan Barang</a></span><br/>
 
                           <i class="shortcut-icon icon-tag"></i>
                           <span class="shortcut-label"><a href="#">Grafik Penjualan Client</a></span><br/>
