edit laporan penjualan per client

--- a/laporan.html
+++ b/laporan.html
@@ -168,10 +168,13 @@
                           <span class="shortcut-label"><a href="print_penjualan_per_client.html">Penjualan per Client</a></span><br/>
 
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="print_penjualan_per_barang.html">Grafik Penjualan Barang</a></span><br/>
+                          <span class="shortcut-label"><a href="print_penjualan_per_barang.html">Penjualan per Barang</a></span><br/>
 
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="#">Grafik Penjualan Client</a></span><br/>
+                          <span class="shortcut-label"><a href="grafik_penjualan_per_client.html">Grafik Penjualan Client</a></span><br/>
+
+                          <i class="shortcut-icon icon-tag"></i>
+                          <span class="shortcut-label"><a href="grafik_penjualan_per_barang.html">Grafik Penjualan Barang</a></span><br/>
                         </div>
                       </div>
                     </div>
