--- a/laporan.html
+++ b/laporan.html
@@ -165,16 +165,16 @@
                       <div class="accordion-inner">
                         <div>
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="print_penjualan_per_vendor.html">Penjualan per Vendor</a></span><br/>
+                          <span class="shortcut-label"><a href="print_penjualan_per_client.html">Penjualan per Client</a></span><br/>
 
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="print_penjualan_per_vendor.html">Penjualan per Vendor</a></span><br/>
+                          <span class="shortcut-label"><a href="print_penjualan_per_barang.html">Penjualan per Barang</a></span><br/>
 
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="grafik_penjualan_per_vendor.html">Grafik Penjualan Vendor</a></span><br/>
+                          <span class="shortcut-label"><a href="grafik_penjualan_per_client.html">Grafik Penjualan Client</a></span><br/>
 
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="grafik_penjualan_per_vendor.html">Grafik Penjualan Vendor</a></span><br/>
+                          <span class="shortcut-label"><a href="grafik_penjualan_per_barang.html">Grafik Penjualan Barang</a></span><br/>
                         </div>
                       </div>
                     </div>
@@ -190,16 +190,16 @@
                       <div class="accordion-inner">
                         <div>
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="print_penjualan_per_client.html">Penjualan per Client</a></span><br/>
+                          <span class="shortcut-label"><a href="print_pembelian_per_vendor.html">Pembelian per Vendor</a></span><br/>
 
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="print_penjualan_per_barang.html">Penjualan per Barang</a></span><br/>
+                          <span class="shortcut-label"><a href="print_pembelian_per_barang.html">Pembelian per Barang</a></span><br/>
 
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="grafik_penjualan_per_client.html">Grafik Penjualan Client</a></span><br/>
+                          <span class="shortcut-label"><a href="grafik_pembelian_per_vendor.html">Grafik Pembelian Vendor</a></span><br/>
 
                           <i class="shortcut-icon icon-tag"></i>
-                          <span class="shortcut-label"><a href="grafik_penjualan_per_barang.html">Grafik Penjualan Barang</a></span><br/>
+                          <span class="shortcut-label"><a href="grafik_pembelian_per_barang.html">Grafik Pembelian Barang</a></span><br/>
                       </div>
                     </div>
 
