edit laporan vendor

--- a/print_pembelian_per_vendor.html
+++ b/print_pembelian_per_vendor.html
@@ -18,27 +18,27 @@
     <thead>
       <tr>
         <th>#</th>
-        <th>Nama Client</th>
-        <th>No. Client</th>
+        <th>Nama Vendor</th>
+        <th>No. Vendor</th>
         <th>Jumlah</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>1</td>
-        <td>PT. Jakarta Client 1</td>
+        <td>PT. Jakarta Vendor 1</td>
         <td>1001</td>
         <td>Rp 1.000.000,-</td>
       </tr>
       <tr>
         <td>2</td>
-        <td>PT. Bandung Client 2</td>
+        <td>PT. Bandung Vendor 2</td>
         <td>1002</td>
         <td>Rp 1.050.000,-</td>
       </tr>
       <tr>
         <td>3</td>
-        <td>PT. Semarang Client 3</td>
+        <td>PT. Semarang Vendor 3</td>
         <td>1003</td>
         <td>Rp 5.000.000,-</td>
       </tr>
