grafik penjualan per client

--- a/grafik_pembelian_per_vendor.html
+++ b/grafik_pembelian_per_vendor.html
@@ -6,7 +6,7 @@
       CanvasJS.addCultureInfo("es", {
         decimalSeparator: ",",// Observe ToolTip Number Format
         digitGroupSeparator: ".", // Observe axisY labels
-        days: ["PT. Jakarta Client 1", "PT. Bandung Client 2", "PT. Medan Client 3", "PT. Semarang Client 4", "PT. Surabaya Client 6", "PT. Makassar Client 7", "PT. Pontianak Client 8"]
+        days: ["PT. Jakarta Vendor 1", "PT. Bandung Vendor 2", "PT. Medan Vendor 3", "PT. Semarang Vendor 4", "PT. Surabaya Vendor 6", "PT. Makassar Vendor 7", "PT. Pontianak Vendor 8"]
 
       });
 
@@ -18,7 +18,7 @@
         },
         // change to "theme1"
         title: {
-          text: "Grafik Penjualan Per Client"
+          text: "Grafik Pembelian Per Vendor"
         },
         data: [
         {
